--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tui = "0.19.0"
+tokio = { version = "1", features = ["full"] }
+failure = "0.1.8"
+crossterm = "0.25.0"
